--- a/css/main.css
+++ b/css/main.css
@@ -1,96 +1,9 @@
-body {
-    background-color: lavender;
+.navbar li a, .navbar .navbar-brand {
+    color: #fff !important;
 }
-
-ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
+.navbar-nav li a:hover, .navbar-nav li.active a {
+    color: plum !important;
 }
-
-li {
-    float: left;
-}
-
-li a {
-    display: block;
-    padding: 10px;
-    background-color: plum;
-    text-align: center;
-    text-decoration: none;
-}
-
-li a:hover {
-    background-color: #9999CC;
-}
-
-h1 {
-    margin-top: 100px;
-    font-family: "chapbook", sans-serif;
-    color: #313131;
-    font-style: normal;
-    text-rendering: optimizeLegibility;
-    text-align: center;
-    font-size: 75px;
-}
-
-h3 {
-    font-family:"big caslon", sans-serif;
-    color: #313131;
-    font-style: normal;
-    text-rendering: optimizeLegibility;
-    text-align: center;
-    margin-top: 80px;
-    font-size: 50px;
-}
-
-p {
-    font-family:"big caslon", sans-serif;
-    color: #313131;
-    font-style: normal;
-    text-rendering: optimizeLegibility;
-    text-align: center;
-    margin-top: 20px;
-    font-size: 20px
-}
-
-.form {
-    font-family:"big caslon", sans-serif;
-    text-align: center;
-    color: #313131;
-    text-rendering: optimizeLegibility;
-    font-size: 30px;
-}
-
-.div {
-    font-family:"big caslon", sans-serif;
-}
-
-.input {
-    font-family:"big caslon", sans-serif;
-    font-size: 25px;
-    text-align: center;
-    padding: 5px;
-    margin-top: 15px;
-}
-
-.button,
-input[type="button"] {
-    margin-left: 450px;
-    margin-top: 25px;
-}
-
-.button i {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    height: 40px;
-    margin-top: auto;
-    margin-bottom: auto;
-    margin-left: 15px;
-}
-
 .popup-background {
     position: fixed;
     top: 0;
