--- a/css/main.css
+++ b/css/main.css
@@ -14,3 +14,13 @@
 .addEmployeeForm div input {
     width: 400px;
 }
+
+/*****  employeeInfo form  *****/
+
+.employeeInfoForm div label {
+    min-width: 150px;
+}
+
+.employeeInfoForm div input {
+    width: 600px;
+}
